================================================================================
Change history for ph-scale
================================================================================

DESIGN ISSUES

HIGH PRIORITY:
- create geometry for bars in graph
- make H3O and OH bars interactive

MEDIUM PRIORITY:

LOW PRIORITY:
- delete MoleculeCountAlternateNode and associated developer controls
- break up Liquid into a few smaller classes (separate pH model, fill/drain mechanism, etc) 
- generalize layout code
- can't align baselines of text and numbers drawn using HTMLNode
- pH text field isn't fully selected when it gains focus or when you double-click in it, selection is generally flakey (PSwing issue?)

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
7/12/08 - make bar graph drag handles visible
******* version 0.00.16 (23133)
7/12/08 - hide bar graph drag handles
7/12/08 - make alternate Molecule Count view the primary view
******* version 0.00.15 (23115)
7/11/08 - remove dependency on jfreechart
7/11/08 - add bar drag handles, they don't do anything yet
7/11/08 - make chart a big shorter so that Linear radio button has some space below it on WinXP
7/11/08 - line up pH slider ticks with bar graph ticks, using TickAlignmentNode
7/11/08 - implement Rest All for all controls
7/11/08 - refactor linear and log y-axes into separate classes
******* version 0.00.14 (23105)
7/11/08 - when switching from log to linear scale, reset y-axis range so that it's zoomed all the way out
7/11/08 - add y-axis label to bar graph, remove units from upper-left corner of graph interior
7/11/08 - handle 10^1 display differently, for example display 9x10 as 90